--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -35,7 +35,15 @@
     <ListView
         android:id="@+id/lsv_other"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:cacheColorHint="#000000" />
+
+    <ImageView
+        android:id="@+id/img_image_off"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/image_off" />
 
 </LinearLayout>
