--- a/app/src/main/res/layout/view_news_common.xml
+++ b/app/src/main/res/layout/view_news_common.xml
@@ -91,13 +91,14 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="2.0"
+        android:background="@color/white"
+        android:paddingLeft="13.0dip"
         android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/barrel_postedLayout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
             android:gravity="center_vertical"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
