--- a/app/src/main/res/layout/view_card_news_descriptions.xml
+++ b/app/src/main/res/layout/view_card_news_descriptions.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/description"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:textColor="@color/textdesc_flip"
     android:textSize="17.0dip" />
